--- a/css/style.css
+++ b/css/style.css
@@ -81,3 +81,49 @@ a{
     line-height: 26px;
 
 }
+
+/* logo style start  */
+
+.logo-img{
+    width: 40%;
+    margin: auto;
+    margin-top: 150px;
+    margin-bottom: 20px;
+}
+.logo-img img{
+    width: 100%;
+}
+/* Footer style  */
+.social-media{
+    border: 1px solid red;
+    width: 40%;
+    margin: auto;
+    text-align: center;    
+}
+.social-media i{
+    background-color: #dadbdd;
+    border-radius: 20px;
+    padding: 8px 8px 8px 8px;
+    font-size: 22px;
+    text-align: center;
+    color: #969BAB;
+    margin-left: 7px;
+    margin-right: 7px;
+    margin-bottom: 20px;
+}
+.social-media p{
+    text-align: center;
+    font-size: 18px;
+    margin-top: 0px;
+    margin-bottom: 63px;
+
+}
+/* team style  */
+.team-info h1{
+    color: black;
+    
+}
+.team{
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+}
