--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,8 @@ body{
     margin: 0;
     font-family: 'Poppins', sans-serif;
 }
-/* banner style  */
 
+/* banner style start */
 .banner{
     background-color: #2D25A0;
 }
@@ -26,8 +26,7 @@ body{
     margin-top: 30px;
 }
 .banner-img img{
-    width: 100%;  
-      
+    width: 100%;       
 }
 .banner-img{
     width: 60%;
@@ -45,26 +44,22 @@ h1{
     font-weight: bold;
     font-size: 50px;
     line-height: 70px;
-    margin-bottom: 26px;
-    
+    margin-bottom: 26px;   
 }
 .banner-tag a{   
     color: white;
     text-decoration: none;
     background-color: #E02C6D;
     font-size: 16px;
-    padding: 10px 24px 10px 24px;
-
-    
+    padding: 10px 24px 10px 24px;    
 }
+/* banner style end */
 
 /* Players style  */
-
 .players{
     width: 70%;
     margin:auto;
-    margin-top: 70px;
-    
+    margin-top: 70px;   
 }
 .player{
     display: grid;
@@ -75,15 +70,13 @@ h1{
     box-shadow: 0px 0px 30px 2px #dddcdc;
     margin-left: 15px;
     margin-right: 15px;
-    margin-bottom: 27px;
-    
+    margin-bottom: 27px;    
 }
 .player-img{
     overflow: hidden;
 }
 .player-img img{
-    width: 100%;
-    
+    width: 100%;    
 }
 .player-img:hover img{
         transform: scale(1.3);
@@ -93,8 +86,9 @@ h1{
     color: #6C6C6C;
     font-size: 16px;
     line-height: 26px;
-
 }
+/* Players style end  */
+
 
 /* logo style start  */
 
@@ -107,6 +101,7 @@ h1{
 .logo-img img{
     width: 100%;
 }
+/* logo style end  */
 
 /* team style  */
 .team-info{
@@ -115,16 +110,12 @@ h1{
 
 .team-info h1 , .gallery h1{
     color: #2D25A0;
-    text-align: center;
-    
-    
+    text-align: center;   
 }
 .team{
     display: grid;
     grid-template-columns: repeat(5,1fr);
-    grid-row-gap: 50px;
-    
-    
+    grid-row-gap: 50px;    
 }
 .teams{
     width: 80%;
@@ -148,17 +139,18 @@ h1{
     background-color: #E02C6D;  
     font-size: 14px;
     padding: 10px 15px 10px 15px;
-    width: 50%;
-    
+    width: 50%;    
 }
 .about a{
     text-decoration: none;
     color: aliceblue;
 }
-/* gallery  */
+/* team style end */
+
+
+/* gallery  start*/
 .gallery{
     margin-top: 80px;
-
 }
 .photos{
     display: grid;
@@ -166,15 +158,13 @@ h1{
     grid-row-gap: 20px;
     grid-column-gap: 20px;
     margin: auto;
-    width: 80%;
-    
+    width: 80%;   
 }
 .photo img{
     width: 100%;
     height: 100%;
     border-radius: 5px; 
 }
-
 .photo{
     box-shadow:0px 0px 10px 2px #bebcbc;
     overflow: hidden;
@@ -183,7 +173,10 @@ h1{
     transform: scale(1.5);
     transition: transform 2s ease-in-out;
 }
-/* Footer style  */
+/* gallery  end */
+
+
+/* Footer style start */
 .social-media{
     width: 40%;
     margin: auto;
@@ -205,23 +198,24 @@ h1{
     font-size: 18px;
     margin-top: 0px;
     margin-bottom: 63px;
-
 }
+/* Footer style end */
+
 
 /* media query  */
 
-/* for tablet  */
+/* for iPads, Tablets */
+
 @media only screen and (min-width:700px) and (max-width:900px) {
+
     /* banner part  */
     .banner-img{
         margin-top: 100px;
-        width: 100%;
-        
+        width: 100%;       
     }
     .banner-img img{
         width: 100%; 
-        margin-left: 60px; 
-          
+        margin-left: 60px;           
     }
     .banner-tag{
         width: 40%;
@@ -252,7 +246,7 @@ h1{
     
 /* For mobile screen  */
 
-@media only screen and (max-width:600px){
+@media only screen and (max-width:700px){
     
     /* banner part  */
     .banner-section{
@@ -260,57 +254,53 @@ h1{
         flex-direction: column;
         width: 90%;
         text-align: left;
-        align-items: center;
-                 
+        align-items: center;                 
     }
     .banner-tag{
         width: 50%;
         margin-right: 80px;
     }
-
     .banner-img{
         margin-top: 50px;
         width: 329px;
         height: 259.17px;
     }
-    h1{
-        
+    h1{        
         font-size: 36px;
         line-height: 50px;
-        margin-bottom: 26px;
-        
+        margin-bottom: 26px;       
     }
+
     /* players part  */
     .player{     
     display: grid;
     grid-template-columns: repeat(1,1fr);
 
     }
-
     .team{
             display: grid;
             grid-template-columns: repeat(2,1fr);
             grid-row-gap: 50px;
     }
-    .about a {
-        
-        font-size: 10px;
-    
+    .about a {        
+        font-size: 10px;   
     }
     .about{
         padding: 3px 5px 3px 5px;
     }
-  
+
     /* gallery  */
     .photos{
         display: grid;
         grid-template-columns: repeat(1,1fr);
     }
+
     /* logo style  */
     .logo-img{
         width: 60%;
 
     }
+
     /* footer  */
     .social-media{
         width: 100%;
@@ -327,6 +317,5 @@ h1{
         margin-left: 5px;
         margin-right: 5px;
         margin-bottom: 4px;
-
 }
 }
